Fixed info block 1 on small displays

--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ body {
     margin: 0 auto;
     width: fit-content;
     text-align: center;
-    padding-top: 30vh;
+    padding-top: 10vh;
     width: 60vw;
 }
 
